--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "echarts": "^4.3.0",
     "echarts-for-react": "^2.0.15-beta.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
